k3s/apps/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app: portainer
  ports:
    - name: web
      port: 8500
      targetPort: 9000
      protocol: TCP
