k3s/apps/portainer/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`portainer.lan`)
      kind: Rule
      services:
        - name: portainer
          port: 8500
